# xpov

./: .gitignore  README.md  build_and_deploy.yml  build_reuse.yml  bulid_call.yml  dev-infracost.yml  secretsmanager.tf  terraform.tfvars  workflow.yml  xpov.code-workspace
.github/workflows/: app_pipeline.yml  build_and_deploy.yml  build_reuse.yml  bulid_call.yml  release.yml  tf_pipeline.yml  workflow.yml
01-infra/: db.tfvars  dev-infracost.yml
01-infra/01-ecr/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  versions.tf  xpov.us-east-2.tfvars
01-infra/backend/: dev.conf  prod.conf  stg.conf
01-infra/base/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
01-infra/base/dev/: dev.tfvars  terraform.tfvars  variables.tf
01-infra/base/prod/: .terraform.lock.hcl  prod.tfvars  state.tf  terraform.tfstate
01-infra/base/stg/: stg.tfvars  terraform.tfstate  variables.tf
01-infra/dev/: dev.tfvars  main.tf  variables.tf
01-infra/dev/ecr/: main.tf
01-infra/dev/ecs/: main.tf
01-infra/envs/: dev.tfvars  prod.tfvars  stg.tfvars
01-infra/infra/: .terraform.lock.hcl  main.tf  variables.tf
01-infra/infra/alb/: main.tf
01-infra/infra/ecr/: main.tf  variables.tf
01-infra/infra/ecs/: main.tf  variables.tf
01-infra/infra/secrets/: main.tf
01-infra/infra/vpc/: main.tf  variables.tf
02-flask-app/: Dockerfile  README.md  docker-build-push.sh  docker-compose.yaml  docker-compose.yml  flask-app-revision.json  requirements.txt  run_app_dev.sh  run_app_prod.sh
02-flask-app/nginx/: Dockerfile  nginx.conf
flask-app/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
flask-app/nginx/: nginx.conf
