[tool.poetry]
name = "xpovi"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
avro = "^1.11.0"
cleo = "^0.8.1"
crcmod = "^1.7"
Django = "^3.2.13"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.11.0"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.8.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-health-check = "^3.17.0"
django-redis = "^5.0.0"
django-storages = "^1.13.1"
djrill = "^2.1.0"
drf-extensions = "^0.7.1"
drf-spectacular = "^0.22.1"
drf-yasg = "^1.20.0"
functions-framework = "^3.0.0"
google-cloud-bigquery = "^3.3.1"
google-cloud-kms = "^2.11.0"
google-cloud-logging = "^3.2.1"
google-cloud-monitoring = "^2.9.1"
google-cloud-pubsub = "^2.9.0"
google-cloud-secret-manager = "^2.10.0"
google-cloud-storage = "^2.4.0"
mailchimp-transactional = "^1.0.47"
mock = "^4.0.3"
Pillow = "^9.0.0"
pika = "^1.2.0"
psycopg2 = "^2.9.2"
pycryptodome = "^3.14.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.1.0"
python = ">=3.9,<3.11"
sentry-sdk = "^1.5.10"
validators = "^0.20.0"
validator = "^0.7.1"

[tool.poetry.dev-dependencies]
django-mock-queries = "^2.1.7"
flake8 = "^4.0.1"
invoke = "^1.6.0"
ipython = "^7.31.0"
isort = "^5.10.1"
neovim = "^0.3.1"
pipdeptree = "^2.2.1"
pre-commit = "^2.15.0"
pydantic = {version = "^1.9.1", extras = ["dotenv"]}
pylint = "2.13.8"
pylint-django = "^2.4.4"
pytest = {version = "^6.2.5*", allow-prereleases = true}
pytest-asyncio = "^0.15.1"
pytest-cov = {version = "^2.13.0*", allow-prereleases = true}
pytest-django = "^4.5.2"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
responses = "^0.16.0"
Werkzeug = "^2.0.2"
locust = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "apps",
    "base",
    "buckets",
    "plans",
]
