[tool.poetry]
name = "xpovi"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
flask = "^2.2.2"
requests = "^2.25.1"
uwsgi = "^2.0.21"
apispec = "^6.0.2"
apispec-webframeworks = "^0.5.2"
marshmallow = "^3.19.0"
flask-swagger-ui = "^4.11.1"
openapi-spec-validator = "^0.5.2"
python = ">=3.9,<3.11"
validators = "^0.20.0"
validator = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
invoke = "^1.6.0"
ipython = "^7.31.0"
isort = "^5.10.1"
neovim = "^0.3.1"
pipdeptree = "^2.2.1"
pre-commit = "^2.15.0"
pydantic = {version = "^1.9.1", extras = ["dotenv"]}
pylint = "2.13.8"
pytest = {version = "^7.1.3*"}
pytest-asyncio = "^0.15.1"
pytest-cov = {version = "^2.13.0*", allow-prereleases = true}
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
responses = "^0.16.0"
Werkzeug = "^2.0.2"
locust = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "app",
]
